...
    // MARK: - Private Methods
    private func setView() {
        createPoster()
        createTitle()
        createPosterConstraint()
        createTitleContstraint()
        self.accessibilityIdentifier = "MovieDetalTableViewCell"
    }

    private func createTitle() {
        titleLabel.text = "Some Title is HERE"
        titleLabel.textColor = .orange
        titleLabel.backgroundColor = .black
...
