...
        navigationController?.navigationBar.barTintColor = .black
        navigationController?.navigationBar.isTranslucent = false
        let attributes = [NSAttributedString.Key.foregroundColor: UIColor.white]
        navigationController?.navigationBar.titleTextAttributes = attributes
        title = "Movies"
        createTableView()
        moviesTableView.accessibilityIdentifier = "MainTableView"
    }

    private func updateViewController() {
        viewModel.updateViewData = {
            DispatchQueue.main.async {
                self.moviesTableView.reloadData()
...
